[project]
name = "uv-workspace-source-overrides-root"
version = "0.0.0"
description = "Workspace root for the uv source-override walkthrough."
requires-python = ">=3.12"
dependencies = ["app", "lib"]

[tool.uv.workspace]
members = ["packages/app", "packages/lib"]

[tool.uv.sources]
app = { workspace = true }
lib = { workspace = true }

[tool.uv]
dev-dependencies = ["pytest>=8.0"]
