[project]
name = "uv-workspace-source-overrides-root"
version = "0.0.0"
description = "Workspace root for the uv source-override walkthrough."
requires-python = ">=3.12"
dependencies = ["app"]

# Lesson 3 drops `packages/lib` from members. The in-tree directory still
# exists (for diffs against the fork) but uv no longer treats it as a
# workspace member. The `lib` name now resolves through the path source
# below to the sibling checkout.
[tool.uv.workspace]
members = ["packages/app"]

[tool.uv.sources]
app = { workspace = true }
# Git source pinned to a specific revision + subdirectory. uv clones the
# repo, checks out `rev`, then installs the package whose `pyproject.toml`
# sits at `subdirectory`. The pin is reproducible — bumping `rev` is an
# intentional act recorded in the lockfile.
#
# The registry-shaped name on `app.dependencies` (`lib>=0.1.0`) still
# applies. If a downstream consumer installs `app` from a real index, they
# see the registry name, not this git URL. Source overrides are
# workspace-local; they do not propagate to dependents.
lib = { git = "https://github.com/vytharion/uv-workspace-source-overrides", rev = "626a7ec", subdirectory = "packages/lib" }

[tool.uv]
dev-dependencies = ["pytest>=8.0"]
